--- a/src/Nobetci.Web/Views/Admin/Users.cshtml
+++ b/src/Nobetci.Web/Views/Admin/Users.cshtml
@@ -1,3 +1,5 @@
+@using Nobetci.Web.Models
+@using Nobetci.Web.Data.Entities
 @model List<UserListItem>
 @{
     ViewData["Title"] = "Kullanıcı Yönetimi";
